<resources>
    <string name="app_name">Catch The Butterfly</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="range">Range</string>
    <string name="insert">Insert</string>
    <string name="location_name">Location Name</string>
    <string name="save">Save</string>
    <string name="insert_data">Insert Data</string>
    <string name="settings">Settings</string>
    <string name="SETTING">SETTING</string>
    <string name="volume">Volume</string>
    <string name="mute">Mute</string>
    <string name="apply">APPLY</string>
    <string name="defaults">DEFAULT</string>
    <string name="target_location">Target Location</string>
    <string name="dot">...</string>
    <string name="coordinate">Coordinate</string>
    <string name="my_location">My Location</string>
    <string name="arrow_"><![CDATA[===]}>]]></string>
</resources>
