<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDML"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/insert_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/insert_data"/>
        <TextView
            android:id="@+id/tVId"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="none" />

        <EditText
            android:id="@+id/eTLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/eTLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitude"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/eTLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longitude"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/eTRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/range"
            android:inputType="textCapWords" />
    </LinearLayout>

    <Button
        android:id="@+id/bSave"
        android:layout_marginTop="20dp"
        android:onClick="Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textStyle="bold"
        android:layout_gravity="center" />
</FrameLayout>
